# internal/api/admin/operation_log.go
@@ -1,0 +1,46 @@
+package admin
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/liony823/tools/a2r"
+	"github.com/openimsdk/chat/pkg/protocol/admin"
+)
+
+// @Summary		搜索操作日志
+// @Description	搜索操作日志
+// @Tags			operation_log
+// @Id	searchOperationLog
+// @Accept			json
+// @Produce		json
+// @Param			data	body		admin.SearchOperationLogReq	true	"查询条件"
+// @Success		200		{object}	apiresp.ApiResponse{data=admin.SearchOperationLogResp}
+// @Router			/operation_log/search [post]
+func (o *Api) SearchOperationLog(c *gin.Context) {
+	a2r.Call(admin.AdminClient.SearchOperationLog, o.adminClient, c)
+}
+
+// @Summary		获取操作日志
+// @Description	获取操作日志
+// @Tags			operation_log
+// @Id	getOperationLog
+// @Accept			json
+// @Produce		json
+// @Param			data	body		admin.GetOperationLogReq	true	"查询条件"
+// @Success		200		{object}	apiresp.ApiResponse{data=admin.GetOperationLogResp}
+// @Router			/operation_log/get [post]
+func (o *Api) GetOperationLog(c *gin.Context) {
+	a2r.Call(admin.AdminClient.GetOperationLog, o.adminClient, c)
+}
+
+// @Summary		删除操作日志
+// @Description	删除操作日志
+// @Tags			operation_log
+// @Id	delOperationLog
+// @Accept			json
+// @Produce		json
+// @Param			data	body		admin.DeleteOperationLogReq	true	"查询条件"
+// @Success		200		{object}	apiresp.ApiResponse{data=admin.DeleteOperationLogResp}
+// @Router			/operation_log/delete [post]
+func (o *Api) DeleteOperationLog(c *gin.Context) {
+	a2r.Call(admin.AdminClient.DeleteOperationLog, o.adminClient, c)
+}
